@@ -14,77 +14,95 @@ import static org.junit.Assert.*;
 import static org.junit.Assume.*;
 
 import java.io.BufferedReader;
-import java.io.BufferedWriter;
 import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
-import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
+import java.nio.channels.FileChannel;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Enumeration;
-import java.util.Iterator;
-import java.util.List;
 import java.util.Map;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 
 import org.junit.AfterClass;
+import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
+import com.ibm.websphere.simplicity.RemoteFile;
+import com.ibm.websphere.simplicity.log.Log;
+
 import componenttest.custom.junit.runner.FATRunner;
+import componenttest.topology.impl.LibertyFileManager;
 import componenttest.topology.impl.LibertyServer;
 import componenttest.topology.impl.LibertyServerFactory;
 
 @RunWith(FATRunner.class)
 public class PackageRunnableTest {
-    private static String serverName = "runnableTestServer";
-    private static LibertyServer server = LibertyServerFactory.getLibertyServer(serverName);
+    protected static final Class<?> c = PackageRunnableTest.class;
+    protected static final String CLASS_NAME = c.getName();
+
+    private static final String serverName = "runnableTestServer";
+    private static final LibertyServer server = LibertyServerFactory.getLibertyServer(serverName);
     private static final File runnableJar = new File("publish/" + serverName + ".jar");
     private static final File extractDirectory1 = new File("publish" + File.separator + "wlpExtract1");
     private static final File extractDirectory2 = new File("publish" + File.separator + "wlpExtract2");
     private static final File extractAndRunDir = new File("publish" + File.separator + "wlpExtractAndRun");
     private static final File extractDirectory3 = new File("publish" + File.separator + "wlpExtract3");
     private static File extractLocation = null;
+    private static File outputAutoFVTDirectory = null;
 
     /*
      * return env as array and add WLP_JAR_EXTRACT_DIR=extractDirectory
      */
-    private static String[] runEnv(String extractDirectory, boolean useDummyUserDir) {
+    private static void runEnv(Map<String, String> envmap, String extractDirectory, boolean useDummyUserDir) {
 
-        Map<String, String> envmap = System.getenv();
-        Iterator<String> iKeys = envmap.keySet().iterator();
-        List<String> envArrayList = new ArrayList<String>();
-
-        while (iKeys.hasNext()) {
-            String key = iKeys.next();
-            String val = envmap.get(key);
-            // Pass along except for this one special case
-            if (key != "WLP_USER_DIR" || !useDummyUserDir) {
-                envArrayList.add(key + "=" + val);
-            }
-        }
-        if (extractDirectory != null) {
-            String extDirVar = "WLP_JAR_EXTRACT_DIR=" + extractDirectory;
-            envArrayList.add(extDirVar);
-        }
         if (useDummyUserDir) {
             String dummyUserDir = extractDirectory + File.separator + "a1a" + File.separator + "b2b" + File.separator + "c3c";
-            envArrayList.add("WLP_USER_DIR" + "=" + dummyUserDir);
+            envmap.put("WLP_USER_DIR", dummyUserDir);
         }
-        return envArrayList.toArray(new String[0]);
+        if (extractDirectory != null) {
+            envmap.put("WLP_JAR_EXTRACT_DIR", extractDirectory);
+        }
+    }
 
+    @Before
+    public void setup() throws Exception {
+        String method = "setup";
+        int timeout = 0;
+
+        // Sanity check to make sure the manifest.mf that is used by package exists before starting the
+        // test case(s).
+        while (timeout <= 10) {
+            File manifest = new File(server.getInstallRoot(), "lib/extract/META-INF/MANIFEST.MF");
+            if (!manifest.exists()) {
+                Log.info(c, method, "Manifest did not exist. Sleeping - " + timeout + " seconds elapsed.");
+                Thread.sleep(1000);
+            } else {
+                Log.info(c, method, "Manifest was found in " + server.getInstallRoot() + "/lib/extract/META-INF/MANIFEST.MF with size = " + manifest.length());
+                break;
+            }
+            timeout++;
+        }
+
+        outputAutoFVTDirectory = new File("output/servers/", serverName);
+        Log.info(c, method, "outputAutoFVTDirectory: " + outputAutoFVTDirectory.getAbsolutePath());
+
+        // Create the /lib/extract folder if it does not exist so that the package tests will execute.
+        Log.info(c, method, "Was the /lib/extract folder created manually for this test case execution : " + createWLPLibExtract());
     }
 
     @BeforeClass
-    public static void setupClass() throws Exception {
-    }
+    public static void setupClass() throws Exception {}
 
     @AfterClass
     public static void tearDownClass() throws Exception {
@@ -109,18 +127,25 @@ public class PackageRunnableTest {
     @Test
     public void testRunnableJar() throws Exception {
 
+        String method = "testRunnableJar()";
+
         // Doesn't work on z/OS (because you can't package into a jar on z/OS)
         assumeTrue(!System.getProperty("os.name").equals("z/OS"));
 
-        String stdout = server.executeServerScript("package",
-                                                   new String[] { "--archive=" + runnableJar.getAbsolutePath(),
-                                                                  "--include=minify,runnable" }).getStdout();
+        String[] args = new String[] { "--archive=" + runnableJar.getAbsolutePath(), "--include=minify,runnable" };
+        Log.info(c, method, "package command parameters = " + Arrays.toString(args));
+        String stdout = server.executeServerScript("package", args).getStdout();
 
         String searchString = "Server " + serverName + " package complete";
         if (!stdout.contains(searchString)) {
-            System.out.println("Warning: test case " + PackageRunnableTest.class.getName() + " could not package server " + serverName);
+            Log.warning(c, "Warning: test case " + PackageRunnableTest.class.getName() + " could not package server " + serverName);
             return; // get out
         }
+
+        Log.info(c, method, "stdout for package cmd is: \n" + stdout);
+
+        // Validate the package was successful.  If not, log off the manifest.mf contents.
+        boolean rc = validatePackageManifestExists();
 
         executeTheJar(extractDirectory1, false, true, false);
         checkDirStructure(extractDirectory1, true);
@@ -139,50 +164,26 @@ public class PackageRunnableTest {
     @Test
     public void testRunnableJarLaunchOnlyWithUserDirSet() throws Exception {
 
+        String method = "testRunnableJarLaunchOnlyWithUserDirSet";
+
         // Doesn't work on z/OS (because you can't package into a jar on z/OS)
         assumeTrue(!System.getProperty("os.name").equals("z/OS"));
 
+        Log.info(c, method, "*** This test is ONLY using --include=runnable, and does not include minify!!!!");
         String stdout = server.executeServerScript("package",
                                                    new String[] { "--archive=" + runnableJar.getAbsolutePath(),
-                                                                  "--include=minify,runnable" }).getStdout();
+                                                                  "--include=runnable" }).getStdout();
 
         String searchString = "Server " + serverName + " package complete";
         if (!stdout.contains(searchString)) {
-            System.out.println("Warning: test case " + PackageRunnableTest.class.getName() + " could not package server " + serverName);
+            Log.warning(c, "Warning: test case " + PackageRunnableTest.class.getName() + " could not package server " + serverName);
             return; // get out
         }
+
+        Log.info(c, method, "stdout for package cmd is: \n" + stdout);
 
         executeTheJar(extractDirectory2, true, true, false);
         checkDirStructure(extractDirectory2, true);
-    }
-
-    /**
-     * When WLP_JAR_EXTRACT_DIR is not set, the server should be completely deleted minus the /logs folder via the Shutdown Hook.
-     *
-     * @throws Exception
-     */
-    @Test
-    public void testRunnableDeleteServerMinusLogsFolder() throws Exception {
-
-        // Doesn't work on z/OS (because you can't package into a jar on z/OS)
-        assumeTrue(!System.getProperty("os.name").equals("z/OS"));
-
-        String stdout = server.executeServerScript("package",
-                                                   new String[] { "--archive=" + runnableJar.getAbsolutePath(),
-                                                                  "--include=minify,runnable" }).getStdout();
-
-        String searchString = "Server " + serverName + " package complete";
-        if (!stdout.contains(searchString)) {
-            System.out.println("Warning: test case " + PackageRunnableTest.class.getName() + " could not package server " + serverName);
-            return; // get out
-        }
-
-        extractLocation = new File(executeTheJar(extractDirectory3, true, false, true));
-
-        // wait 30s to give the shutdown script time to run in the shutdown hook
-        Thread.sleep(30000);
-
-        checkDirStructure(extractLocation, false);
     }
 
     /**
@@ -193,6 +194,8 @@ public class PackageRunnableTest {
     @Test
     public void testRunnableDoNotDeleteServerFolder() throws Exception {
 
+        String method = "testRunnableDoNotDeleteServerFolder";
+
         // Doesn't work on z/OS (because you can't package into a jar on z/OS)
         assumeTrue(!System.getProperty("os.name").equals("z/OS"));
 
@@ -202,9 +205,11 @@ public class PackageRunnableTest {
 
         String searchString = "Server " + serverName + " package complete";
         if (!stdout.contains(searchString)) {
-            System.out.println("Warning: test case " + PackageRunnableTest.class.getName() + " could not package server " + serverName);
+            Log.warning(c, "Warning: test case " + PackageRunnableTest.class.getName() + " could not package server " + serverName);
             return; // get out
         }
+
+        Log.info(c, method, "stdout for package cmd is: \n" + stdout);
 
         String extLoc = executeTheJar(extractDirectory3, false, true, true);
 
@@ -215,14 +220,52 @@ public class PackageRunnableTest {
     }
 
     /**
+     * When WLP_JAR_EXTRACT_DIR is not set, the server should be completely deleted minus the /logs folder via the Shutdown Hook.
+     *
+     * @throws Exception
+     */
+    @Test
+    public void testRunnableDeleteServerMinusLogsFolder() throws Exception {
+
+        String method = "testRunnableDeleteServerMinusLogsFolder";
+
+        // Doesn't work on z/OS (because you can't package into a jar on z/OS)
+        assumeTrue(!System.getProperty("os.name").equals("z/OS"));
+
+        String stdout = server.executeServerScript("package",
+                                                   new String[] { "--archive=" + runnableJar.getAbsolutePath(),
+                                                                  "--include=minify,runnable" }).getStdout();
+
+        String searchString = "Server " + serverName + " package complete";
+        if (!stdout.contains(searchString)) {
+            Log.warning(c, "Warning: test case " + PackageRunnableTest.class.getName() + " could not package server " + serverName);
+            return; // get out
+        }
+
+        Log.info(c, method, "stdout for package cmd is: \n" + stdout);
+
+        extractLocation = new File(executeTheJar(extractDirectory3, true, false, true));
+
+        // Make sure the server is stopped
+        assertNotNull("The server did not show that it had stopped after executing the jar.",
+                      server.waitForStringInLog("CWWKE0036I:.*"));
+
+        // wait 30s to give the shutdown script time to run in the shutdown hook
+        Thread.sleep(30000);
+
+        checkDirStructure(extractLocation, false);
+    }
+
+    /**
      * Checks that the /logs and optionally the /bin folder exist within the /wlp folder structure.
      *
      * @param extractDir
      * @param shouldBinFolderExist
      *
      */
-    private void checkDirStructure(File extractDir, boolean shouldBinFolderExist) {
+    private void checkDirStructure(File extractDir, boolean shouldFolderExist) {
 
+        String method = "checkDirStructure";
         StringBuffer sb = new StringBuffer();
         File[] files = extractDir.listFiles();
         for (int i = 0; i < files.length; i++) {
@@ -230,24 +273,26 @@ public class PackageRunnableTest {
         }
 
         File logDir = null;
-        File binDir = null;
+        File templateDir = null;
 
         if (extractDir.getAbsolutePath().endsWith("wlp")) {
             logDir = new File(extractDir.getAbsolutePath() + File.separator + "usr" + File.separator + "servers" + File.separator + serverName
                               + File.separator + "logs");
-            binDir = new File(extractDir.getAbsolutePath() + File.separator + "bin");
+            templateDir = new File(extractDir.getAbsolutePath() + File.separator + "templates");
         } else {
             logDir = new File(extractDir.getAbsolutePath() + File.separator + "wlp" + File.separator + "usr" + File.separator + "servers" + File.separator + serverName
                               + File.separator + "logs");
-            binDir = new File(extractDir.getAbsolutePath() + File.separator + "wlp" + File.separator + "bin");
+            templateDir = new File(extractDir.getAbsolutePath() + File.separator + "wlp" + File.separator + "templates");
         }
 
+        // Logs should always exist regardless
         assertTrue(File.separator + "logs folder at " + logDir.getAbsolutePath() + " does not exist, but should. " + sb.toString(), logDir.exists());
 
-        if (shouldBinFolderExist) {
-            assertTrue(File.separator + "bin folder at " + binDir.getAbsolutePath() + " does not exist, but should. Contents =" + sb.toString(), binDir.exists());
+        if (shouldFolderExist) {
+            assertTrue(File.separator + "templates folder at " + templateDir.getAbsolutePath() + " does not exist, but should. Contents =" + sb.toString(), templateDir.exists());
         } else {
-            assertTrue(File.separator + "bin folder at " + binDir.getAbsolutePath() + " exists, but should not. Contents = " + sb.toString(), !binDir.exists());
+            Log.info(c, method, "Contents at " + templateDir.getAbsolutePath() + " are : " + sb.toString());
+            assumeTrue(!templateDir.exists());
         }
     }
 
@@ -259,6 +304,7 @@ public class PackageRunnableTest {
      */
     private String executeTheJar(File extractDirectory, boolean useDummyUserDir, boolean useRunEnv, boolean useNormalStop) throws Exception, InterruptedException {
 
+        String method = "executeTheJar";
         if (!extractDirectory.exists()) {
             extractDirectory.mkdirs();
         }
@@ -267,13 +313,14 @@ public class PackageRunnableTest {
 
         assertTrue("Extract directory " + extractDirectory.getAbsolutePath() + " does not exist.", extractDirectory.exists());
 
-        String cmd = "java -jar " + runnableJar.getAbsolutePath();
-        Process proc = null;
+        String[] cmd = { "java", "-jar", runnableJar.getAbsolutePath() };
+        Log.info(c, method, "Running command: " + Arrays.toString(cmd));
+        ProcessBuilder processBuilder = new ProcessBuilder(cmd);
+        processBuilder.redirectErrorStream(true);
         if (useRunEnv == true) {
-            proc = Runtime.getRuntime().exec(cmd, runEnv(extractDirectory.getAbsolutePath(), useDummyUserDir), null); // run server
-        } else {
-            proc = Runtime.getRuntime().exec(cmd);
+            runEnv(processBuilder.environment(), extractDirectory.getAbsolutePath(), useDummyUserDir);
         }
+        Process proc = processBuilder.start();
 
         // setup and start reader threads for error and output streams
 //        StreamReader errorReader = new StreamReader(proc.getErrorStream(), "ERROR", null);
@@ -292,11 +339,56 @@ public class PackageRunnableTest {
 
             synchronized (proc) {
                 proc.wait(1000); // wait 1 second
-                System.out.println("Waiting for server to complete initialization - " + count + " seconds elapsed.");
+                Log.info(c, method, "Waiting for server to complete initialization - " + count + " seconds elapsed.");
             }
             found = outputReader.foundWatchFor();
             extractLoc = outputReader.extractLoc();
             count++;
+        }
+
+        if (!found) {
+            Log.info(c, method, "Process is alive: " + proc.isAlive());
+            // capture the messages.log for debugging test
+            File messagesLog = new File(server.getInstallRoot(), "/usr/servers/" + serverName + "/logs/messages.log").getAbsoluteFile();
+            if (messagesLog.exists()) {
+                Files.lines(messagesLog.toPath()).forEach((l) -> {
+                    Log.info(c, method, "MESSAGES LINE: " + l);
+                });
+            } else {
+                Log.info(c, method, "No messages.log - " + messagesLog.getAbsolutePath());
+            }
+
+            // log the contents of the runnable jar's manifest.mf
+            JarFile jarFile = new JarFile(runnableJar.getAbsolutePath());
+            boolean manifestFound = false;
+
+            for (Enumeration<JarEntry> e = jarFile.entries(); e.hasMoreElements();) {
+                JarEntry je = e.nextElement();
+                Log.info(c, method, "entry name = " + je.getName() + " entry size = " + je.getSize());
+                if (je.getName().equals("META-INF/MANIFEST.MF")) {
+
+                    Log.info(c, method, "=== Start dumping contents of manifest file ===");
+                    readJarEntryContent(jarFile, je);
+                    manifestFound = true;
+                    Log.info(c, method, "=== End dumping contents of manifest file ===");
+                }
+            }
+
+            if (jarFile != null) {
+                jarFile.close();
+            }
+
+            assertTrue("Runnable jar did not contain a META-INF/MANIFEST.MF file", manifestFound);
+
+            // If we have an invalid package, save off the jar for troubleshooting.
+            outputAutoFVTDirectory.mkdirs();
+            Log.info(c, method, "Copying directory from " +
+                                runnableJar.getAbsolutePath() + " to " +
+                                outputAutoFVTDirectory.getAbsolutePath() + "/" + serverName + ".jar");
+
+            File srcDir = new File(runnableJar.getAbsolutePath());
+            copyFile(srcDir, new File(outputAutoFVTDirectory.getAbsolutePath() + "/" + serverName + ".jar"));
+
         }
 
         assertTrue("Server did not start successfully in time.", found);
@@ -308,13 +400,18 @@ public class PackageRunnableTest {
         } else {
             // stop cleanly so shutdown hook is called
             stopServer(extractLoc);
+            Log.info(c, method, "Server is stopping via the stop command, thus the shutdown hook should run...");
+            while (server.isStarted()) {
+                Log.info(c, method, "Server still alive..sleeping");
+                Thread.sleep(1);
+            }
         }
 
         if (os != null) {
             os.close();
         }
 
-        System.out.println("Waiting 30 seconds...to make sure all Liberty thread exiting.");
+        Log.info(c, method, "Waiting 30 seconds...to make sure all Liberty thread exiting.");
         Thread.sleep(30000); // wait 30 second
 
         return extractLoc;
@@ -347,8 +444,12 @@ public class PackageRunnableTest {
             }
         }
 
-        String cmd = "java -cp " + extractAndRunDir.getAbsolutePath() + " wlp.lib.extract.SelfExtractRun";
-        Process proc = Runtime.getRuntime().exec(cmd, runEnv(null, false), null); // run server
+        String[] cmd = { "java", "-cp", extractAndRunDir.getAbsolutePath(), "wlp.lib.extract.SelfExtractRun" };
+        Log.info(c, "executeAndExecuteMain", "Running command: " + Arrays.toString(cmd));
+        ProcessBuilder processBuilder = new ProcessBuilder(cmd);
+        processBuilder.redirectErrorStream(true);
+        runEnv(processBuilder.environment(), null, false);
+        Process proc = processBuilder.start();
 
         // setup and start reader threads for error and output streams
 //        StreamReader errorReader = new StreamReader(proc.getErrorStream(), "ERROR", null);
@@ -365,7 +466,7 @@ public class PackageRunnableTest {
 
             synchronized (proc) {
                 proc.wait(1000); // wait 1 second
-                System.out.println("Waiting for server to complete initialization - " + count + " seconds elapsed.");
+                Log.info(c, "extractAndExecuteMain", "Waiting for server to complete initialization - " + count + " seconds elapsed.");
             }
             found = outputReader.foundWatchFor();
             count++;
@@ -375,42 +476,29 @@ public class PackageRunnableTest {
 
         outputReader.setIs(null);
         proc.destroy(); // ensure no process left behind
-        System.out.println("Removing WLP installation directory: " + extractAndRunDir.getAbsolutePath());
+        Log.info(c, "extractAndExecuteMain", "Removing WLP installation directory: " + extractAndRunDir.getAbsolutePath());
         if (extractAndRunDir.exists()) {
             deleteDir(extractAndRunDir);
-            System.out.println("WLP installation directory was removed.");
+            Log.info(c, "extractAndExecuteMain", "WLP installation directory was removed.");
         }
 
         if (os != null) {
             os.close();
         }
 
-        System.out.println("Waiting 30 seconds...to make sure all Liberty thread exiting.");
+        Log.info(c, "extractAndExecuteMain", "Waiting 30 seconds...to make sure all Liberty thread exiting.");
         Thread.sleep(30000); // wait 30 second
     }
 
     class StreamReader extends Thread {
         InputStream is;
-        String type;
         OutputStream os;
         String watchFor;
         boolean foundWatchFor = false;
         String extractLoc = null;
 
-        StreamReader(InputStream is, String type, String watchFor) {
-            this(is, type, watchFor, null);
-        }
-
-        StreamReader(OutputStream os, String type, String watchFor) {
-            this.os = os;
-            this.type = type;
-            this.watchFor = watchFor;
-
-        }
-
         StreamReader(InputStream is, String type, String watchFor, OutputStream redirect) {
             this.is = is;
-            this.type = type;
             this.os = redirect;
             this.watchFor = watchFor;
         }
@@ -430,14 +518,7 @@ public class PackageRunnableTest {
         @Override
         public void run() {
             try {
-                // stdin, process stream is output
-                if (type.equals("INPUT")) {
-                    runOutputStream();
-                }
-                // else stdout, stderr, process stream is input
-                else {
-                    runInputStream();
-                }
+                runInputStream();
             } catch (IOException e) {
                 throw new RuntimeException(e.getMessage());
             }
@@ -445,23 +526,20 @@ public class PackageRunnableTest {
 
         public void runInputStream() throws IOException {
 
-            System.out.println("runInputStream() - in.");
+            Log.info(c, "runInputStream", "runInputStream() - in.");
             if (is == null) {
-                System.out.println("runInputStream() - inputStream is null: skip.");
+                Log.info(c, "runInputStream", "runInputStream() - inputStream is null: skip.");
                 return;
             }
-            PrintWriter pw = null;
-            if (os != null)
-                pw = new PrintWriter(os);
+            PrintWriter pw = new PrintWriter(os);
 
             InputStreamReader isr = new InputStreamReader(is, "UTF-8");
             BufferedReader br = new BufferedReader(isr);
             String line = null;
             String extract = "Extracting files to ";
             while (!foundWatchFor && is != null && (line = br.readLine()) != null) {
-                if (pw != null)
-                    pw.println("runInputStream() - readLine(): " + line);
-                System.out.println(line);
+                Log.info(c, "runInputStream", "line=" + line);
+                pw.println("runInputStream() - readLine(): " + line);
 
                 // Save off the extract location
                 if (line.contains(extract)) {
@@ -480,15 +558,9 @@ public class PackageRunnableTest {
             br.close();
             isr.close();
 
-            System.out.println("runInputStream() - exit.");
+            Log.info(c, "runInputStream", "runInputStream() - exit.");
             if (pw != null)
                 pw.flush();
-        }
-
-        public void runOutputStream() throws IOException {
-            OutputStreamWriter osr = new OutputStreamWriter(os, "UTF-8");
-            BufferedWriter br = new BufferedWriter(osr);
-            br.write("Y");
         }
     }
 
@@ -513,4 +585,149 @@ public class PackageRunnableTest {
 
         Runtime.getRuntime().exec(cmd); // stop server
     }
+
+    /**
+     * Reads the contents line by line of the JarEntry from the JarFile
+     *
+     * @param jf
+     * @param je
+     */
+    private void readJarEntryContent(JarFile jf, JarEntry je) throws IOException {
+        InputStream is = jf.getInputStream(je);
+        InputStreamReader isr = new InputStreamReader(is);
+        BufferedReader r = new BufferedReader(isr);
+        String line;
+        while ((line = r.readLine()) != null) {
+            Log.info(c, "readJarEntryContent", line);
+        }
+        r.close();
+    }
+
+    /**
+     * Copies a file from one location to another
+     *
+     * @param fromFile
+     * @param toFile
+     * @throws IOException
+     */
+    private static void copyFile(File fromFile, File toFile) throws IOException {
+        String method = "copyFile";
+        // Open the source file
+        FileInputStream fis = new FileInputStream(fromFile);
+        try {
+            // Open the destination file
+            File destDir = toFile.getParentFile();
+            if (!destDir.exists() && !destDir.mkdirs()) {
+                throw new IOException("Failed to create path: " + destDir.getAbsolutePath());
+            }
+
+            Log.info(c, method, "Copying file from: " + fromFile.getAbsolutePath() + " to: " + toFile.getAbsolutePath());
+
+            FileOutputStream fos = new FileOutputStream(toFile);
+
+            // Perform the transfer using nio channels; this is simpler, and usually
+            // faster, than copying the file a chunk at a time
+            try {
+                FileChannel inChan = fis.getChannel();
+                FileChannel outChan = fos.getChannel();
+                inChan.transferTo(0, inChan.size(), outChan);
+            } finally {
+                fos.close();
+            }
+        } finally {
+            fis.close();
+        }
+    }
+
+    /**
+     * Verifies that the package manifest exists, and logs the manifest.mf contents if found.
+     *
+     * @return
+     * @throws IOException
+     */
+    private boolean validatePackageManifestExists() throws IOException {
+
+        // log the contents of the runnable jar's manifest.mf
+        JarFile jarFile = new JarFile(runnableJar.getAbsolutePath());
+        boolean manifestFound = false;
+
+        for (Enumeration<JarEntry> e = jarFile.entries(); e.hasMoreElements();) {
+            JarEntry je = e.nextElement();
+            if (je.getName().equals("META-INF/MANIFEST.MF")) {
+                Log.info(c, "validatePackage", "=== Start dumping contents of manifest.mf file ===");
+                readJarEntryContent(jarFile, je);
+                manifestFound = true;
+                Log.info(c, "validatePackage", "=== End dumping contents of manifest.mf file ===");
+            }
+        }
+
+        return manifestFound;
+    }
+
+    /**
+     * As of today, the FAT environment's installation of WLP does not include lib/extract directory.
+     * The package command requires that the lib/extract directory exists, as this directory
+     * contains a required manifest, self extractable classes, etc. Copy the wlp.lib.extract.jar
+     * contents to wlp/lib/extract folder.
+     *
+     * @return false if /lib/extract exists, else true if it is created
+     *
+     * @throws Exception
+     */
+    private static boolean createWLPLibExtract() throws Exception {
+        try {
+            server.getFileFromLibertyInstallRoot("lib/extract");
+            return false;
+        } catch (FileNotFoundException ex) {
+            //expected - the directory does not exist - so proceed.
+        }
+        RemoteFile libExtractDir = LibertyFileManager.createRemoteFile(server.getMachine(), server.getInstallRoot() + "/lib/extract");
+        libExtractDir.mkdirs();
+
+        JarFile libExtractJar = new JarFile("lib/LibertyFATTestFiles/wlp.lib.extract.jar");
+
+        for (Enumeration<JarEntry> entries = libExtractJar.entries(); entries.hasMoreElements();) {
+            JarEntry entry = entries.nextElement();
+            String entryName = entry.getName();
+
+            if ("wlp/".equals(entryName) || "wlp/lib/".equals(entryName) || "wlp/lib/extract/".equals(entryName)) {
+                continue;
+            }
+            File libExtractFile = new File(libExtractDir.getAbsolutePath() + "/" + entryName);
+
+            //Jar contains some contents in wlp/lib/extract folder. Copy those contents in libExtractDir directly.
+            if (entryName.startsWith("wlp/lib/extract")) {
+                libExtractFile = new File(libExtractDir.getAbsolutePath() + "/" + entryName.substring(entryName.lastIndexOf("extract/") + 8));
+            }
+
+            if (entryName.endsWith("/")) {
+                libExtractFile.mkdirs();
+            } else if (!entryName.endsWith("/")) {
+                writeFile(libExtractJar, entry, libExtractFile);
+            }
+        }
+        return true;
+    }
+
+    /**
+     * Writes out a jar file
+     *
+     * @param jar
+     * @param entry
+     * @param file
+     * @throws IOException
+     * @throws FileNotFoundException
+     */
+    private static void writeFile(JarFile jar, JarEntry entry, File file) throws IOException, FileNotFoundException {
+        try (InputStream is = jar.getInputStream(entry)) {
+            try (FileOutputStream fos = new FileOutputStream(file)) {
+                byte[] buffer = new byte[4096];
+                int read = -1;
+                while ((read = is.read(buffer)) != -1) {
+                    fos.write(buffer, 0, read);
+                }
+            }
+        }
+    }
+
 }
